Add Avni Sharma as chair

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -37,6 +37,9 @@ workinggroups:
   label: service-binding
   leadership:
     chairs:
+    - github: Avni-Sharma
+      name: Avni Sharma
+      company: Redhat
     - github: kyleschlosser
       name: Kyle Schlosser
       company: IBM
