--- a/sigs.yaml
+++ b/sigs.yaml
@@ -56,5 +56,33 @@ workinggroups:
   contact:
     slack: kubernetes-operators
     mailing_list: https://groups.google.com/forum/#!forum/operator-framework-olm-dev
+- dir: wg-osdk
+  name: OSDK
+  mission_statement: >
+    To organize and steer the development of the [Operator SDK](https://github.com/operator-framework/operator-sdk)
+    and related projects.
+
+  label: osdk
+  leadership:
+    chairs:
+    - github: estroz
+      name: Eric Stroczynski
+      company: Red Hat
+    - github: jberkhahn
+      name: Jonathan Berkhahn
+      company: IBM
+    - github: kensipe
+      name: Ken Sipe
+      company: KUDO
+  meetings:
+  - description: Regular WG Meeting
+    day: Wednesday
+    time: "09:00"
+    tz: PT (Western Time)
+    frequency: monthly
+    url: https://docs.google.com/document/d/1ujWb-rSJ4JWeHLVxK0WS5ZuSJgeESG42MDeYjSl9Q6U/edit
+  contact:
+    slack: kubernetes-operators
+    mailing_list: https://groups.google.com/forum/#!forum/operator-framework
 usergroups: []
 committees: []
