--- a/sigs.yaml
+++ b/sigs.yaml
@@ -33,10 +33,9 @@ workinggroups:
   mission_statement: >
     To organize and steer the development of projects that enable teams to manage
     the lifecycle of operators. These projects include:
-
-
       - The [Operator Lifecycle Manager project](https://github.com/operator-framework/operator-lifecycle-manager)
       - The [Operator Registry project](https://github.com/operator-framework/operator-registry)
+
   label: olm
   leadership:
     chairs:
@@ -47,12 +46,20 @@ workinggroups:
       name: Kevin Rizza
       company: Red Hat
   meetings:
+  - description: Feature Planning Meeting
+    day: Thursday
+    time: "10:00"
+    tz: ET (Eastern Time)
+    frequency: biweekly
+    url: https://docs.google.com/document/d/1LMQ5QlEYgGBeSc75fhHh-VFJ8_B2j4ieBcagIa-QfwU/edit
+    recordings_url: https://www.youtube.com/playlist?list=PLEcO8aSeUjeXoywfA_VQdxkqP00-VBzEA
   - description: Regular WG Meeting
     day: Thursday
     time: "15:00"
     tz: ET (Eastern Time)
     frequency: biweekly
     url: https://docs.google.com/document/d/1Zuv-BoNFSwj10_zXPfaS9LWUQUCak2c8l48d0-AhpBw/edit
+    recordings_url: https://www.youtube.com/playlist?list=PLEcO8aSeUjeXDvBtPlaAvPTaknPR0Uwi-
   contact:
     slack: olm-dev
     mailing_list: https://groups.google.com/forum/#!forum/operator-framework-olm-dev
@@ -81,18 +88,21 @@ workinggroups:
     tz: PT (Western Time)
     frequency: triweekly
     url: https://docs.google.com/document/d/1ujWb-rSJ4JWeHLVxK0WS5ZuSJgeESG42MDeYjSl9Q6U/edit
+    recordings_url: https://www.youtube.com/playlist?list=PLEcO8aSeUjeXxkVh27ExScB_wEmhBLY7g
   - description: Issue Traige Meeting
     day: Monday
     time: "11:00"
     tz: PT (Western Time)
     frequency: weekly
     url: https://github.com/operator-framework/operator-sdk/issues?q=is%3Aopen+is%3Aissue+no%3Amilestone+sort%3Acreated-asc
+    recordings_url: https://www.youtube.com/playlist?list=PLEcO8aSeUjeXxkVh27ExScB_wEmhBLY7g
   - description: Regular WG Meeting
     day: Wednesday
     time: "09:00"
     tz: PT (Western Time)
     frequency: monthly
     url: https://docs.google.com/document/d/1ujWb-rSJ4JWeHLVxK0WS5ZuSJgeESG42MDeYjSl9Q6U/edit
+    recordings_url: https://www.youtube.com/playlist?list=PLEcO8aSeUjeXHH9ZVSJzx4wJBgkN9BhVP
   contact:
     slack: operator-sdk-dev
     mailing_list: https://groups.google.com/forum/#!forum/operator-framework
