Add Daniel to generator

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -33,6 +33,7 @@ workinggroups:
   mission_statement: >
     To organize and steer the development of projects that enable teams to manage
     the lifecycle of operators. These projects include:
+
       - The [Operator Lifecycle Manager project](https://github.com/operator-framework/operator-lifecycle-manager)
       - The [Operator Registry project](https://github.com/operator-framework/operator-registry)
   label: olm
@@ -40,6 +41,9 @@ workinggroups:
     chairs:
     - github: awgreene
       name: Alexander Greene
+      company: Red Hat
+    - github: exdx
+      name: Daniel Sover
       company: Red Hat
     - github: kevinrizza
       name: Kevin Rizza
