--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1,27 +1,35 @@
 sigs: []
 workinggroups:
+  - dir: wg-ci
+    name: CI
+    mission_statement: >
+      Improve continuous integration (CI) for operators created, installed, and managed by components of Operator Framework.
+    label: ci
+    leadership:
+      chairs:
+        - github: gallettilance
+          name: Lance Galletti
+          company: Red Hat
+        - github: njhale
+          name: Nick Hale
+          company: Red Hat
+        - github: shawn-hurley
+          name: Shawn Hurley
+          company: Red Hat
+    meetings:
+      - description: Regular WG Meeting
+        day: Wednesday
+        time: "14:00"
+        tz: ET (Eastern Time)
+        frequency: biweekly
+        url: https://docs.google.com/document/d/14aUnEEIYmvUhnIvF_pl86-1BzJj9y6t1xY4ImIHtWXY/edit#heading=h.g1tg5lyjvb51
+    contact:
+      slack: kubernetes-operators
+      mailing_list: https://groups.google.com/forum/#!forum/operator-framework-wg-ci
   - dir: wg-olm
     name: OLM
     mission_statement: >
       To organize and steer the development of projects that enable teams to manage the lifecycle of operators. These projects include:
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         - The [Operator Lifecycle Manager project](https://github.com/operator-framework/operator-lifecycle-manager)
         - The [Operator Registry project](https://github.com/operator-framework/operator-registry)
     label: olm
@@ -56,9 +64,8 @@ workinggroups:
       mailing_list: https://groups.google.com/forum/#!forum/operator-framework-olm-dev
   - dir: wg-osdk
     name: OSDK
-    mission_statement: >
+    mission_statement: >-
       To organize and steer the development of the [Operator SDK](https://github.com/operator-framework/operator-sdk) and related projects.
-
     label: osdk
     leadership:
       chairs:
